app/src/main/java/com/example/rentit/core/error/UnknownException.kt
package com.example.rentit.core.error

class UnknownException(message: String? = null): Exception(message)